Finish backend for parent/student linking
