# models/index.ts
@@ -12,11 +12,13 @@ export * from "./CreateClassEvent";
 export * from "./CreateItem";
 export * from "./CreateModule";
 export * from "./CreateOneOffEvent";
+export * from "./CreateParentStudentLink";
 export * from "./CreateUser";
 export * from "./Image";
 export * from "./Item";
 export * from "./Module";
 export * from "./OneOffEvent";
+export * from "./ParentStudentLink";
 export * from "./Roles";
 export * from "./SingleUserAttendance";
 export * from "./Staff";
